module8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httptest
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - www.mangohttp.com
      secretName: mango-tls
  rules:
    - host: www.mangohttp.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpsvc
                port:
                  number: 80
